/** Common gradle conventions shared by all Bitflask application and library subprojects. */

plugins {
    id 'java'
    id 'idea'
}

group 'dev.sbutler'
version '1.0'

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = '20'
    targetCompatibility = '20'
}

dependencies {
    implementation 'com.google.inject:guice:7.0.0'
    implementation 'com.google.inject.extensions:guice-assistedinject:7.0.0'
    implementation 'com.google.inject.extensions:guice-throwingproviders:7.0.0'

    implementation 'com.google.guava:guava:32.1.2-jre'

    implementation 'com.google.mug:mug:6.6'
    implementation 'com.google.mug:mug-guava:6.6'

    implementation 'com.google.flogger:flogger:0.7.4'
    implementation 'com.google.flogger:flogger-log4j2-backend:0.7.4'

    implementation 'com.beust:jcommander:1.82'

    // Testing

    testImplementation 'com.google.guava:guava-testlib:32.1.2-jre'

    testImplementation "com.google.truth:truth:1.1.5"
    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.1.5'

    testImplementation(platform('org.junit:junit-bom:5.10.0'))
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['--enable-preview'])
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.concurrent'])
}

tasks.withType(Test).configureEach {
    // gradle-8.1-rc-2 throws when addAll() used
    jvmArgs += "--enable-preview"
    jvmArgs += "--add-modules"
    jvmArgs += "jdk.incubator.concurrent"
}

tasks.withType(JavaExec).configureEach {
    // gradle-8.1-rc-2 throws when addAll() used
    jvmArgs += "--enable-preview"
    jvmArgs += "--add-modules"
    jvmArgs += "jdk.incubator.concurrent"
}
